# artis

./: ...  .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovate.json  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  MyMakefile  README  README.md  README.old  README_old  artisoptions.hpp  artisoptions_christinenonthermal.h  artisoptions_christinenonthermal.hpp  artisoptions_classic.h  artisoptions_classic.hpp  artisoptions_doc.md  artisoptions_example.h  artisoptions_finn_nlte.h  artisoptions_kilonova_lte.h  artisoptions_kilonova_lte.sh  artisoptions_lukekilonova.h  artisoptions_lukekilonova_lte.h  artisoptions_lukekilonova_lte.hpp  artisoptions_nltenebular 2.h  artisoptions_nltenebular.h  artisoptions_nltenebular.hpp  artisoptions_nltewithoutnonthermal.h  assert.h  atomic.c  atomic.cc  atomic.cpp  atomic.h  (+210 more)
.github/: CODEOWNERS
.github/workflows/: build.yml  ccpp.yml  ci-checks.yml  ci-simulations.yml  ci.yml  cislowtestmode.yml  clang-tidy.yml
data/: alphadecays.txt  auger-km1993-reference.txt  auger-km1993-table2.txt  auger-km1993-table3.txt  betaminusdecays.txt  binding_energies.txt  binding_energies_lotz_tab1and2.txt  bindingenergies_Lotz_tab1and2.txt  bindingenergies_lotz_tab1and2.txt  co56_lines.txt  co57_lines.txt  collion-auger-reference.txt  collion-auger.txt  collion-reference.txt  collion.txt  electron_shell_occupancy.txt  fissiondecays.txt  ni57_lines.txt  shells.txt  v48_lines.txt  xcom_photoion_data.txt
deprecated/: syn_gamma.c  syn_lc.c
notused/: syn_gamma.c
scripts/: artis-cambridge-icelake.sh  artis-cambridge-skylake.sh  artis-cambridge.sh  artis-cosma8.sh  artis-dirac.sh  artis-gadi-gpu.sh  artis-gadi.sh  artis-juwels.sh  artis-kelvin2.sh  artis-raijin.sh  artis-virgo-slurmjob.sh  artis-virgo-submit.sh  artis-virgo-submit_large1920.sh  artis-virgo-submit_small0960.sh  clean.sh  exspec-after.sh  exspec-before.sh  exspec-gzip-cambridge-icelake.sh  exspec-gzip-cambridge-skylake.sh  exspec-gzip-cambridge.sh  exspec-gzip-dirac.sh  exspec-gzip-gadi_raijin.sh  exspec-gzip-juwels.sh  exspec-gzip-raijin.sh  exspec-gzip-virgo-slurmjob.sh  exspec-gzip-virgo-submit.sh  exspec-raijin.sh  exspec-zip-cambridge-icelake.sh  exspec-zip-juwels.sh  exspec-zip-virgo-slurmjob.sh  exspec-zip-virgo-submit.sh  exspec.sh  gzippackets-raijin.sh  mergeangleres.py  movefiles.sh  plot_thread_timing.py  raijin.sh  slurmjobhoursleft.py  sumcorehourslogs.py  sumcorehoursslurm.py  (+1 more)
slice3dmodel/: slice3dmodel.py
tests/: .gitignore  setup_classicmode.sh  setup_classicmode_1d_3dgrid.sh  setup_classicmode_3d.sh  setup_kilonova.sh  setup_kilonova_1d_1dgrid.sh  setup_kilonova_1d_1dgrid_expansionopac.sh  setup_kilonova_1d_3dgrid.sh  setup_kilonova_2d.sh  setup_kilonova_2d_2dgrid.sh  setup_kilonova_2d_2dgrid_barnesthermalisation.sh  setup_kilonova_2d_2dgrid_expansionopac.sh  setup_kilonova_2d_2dgrid_xcomgammaphotoion.sh  setup_kilonova_2d_3dgrid.sh  setup_nebular_1d_3dgrid.sh  setup_nebular_1d_3dgrid_limitbfest.sh  setup_nebularonezone.sh  setup_nebularonezone_1d_3dgrid.sh  setup_nebularonezone_1d_3dgrid_limitbfest.sh  setuptestdata.sh
tests/classicmode_1d_3dgrid_inputfiles/: compositiondata.txt  input-newrun.txt  input-resume.txt  model.txt  results_md5_final.txt  results_md5_job0.txt  vpkt.txt
tests/classicmode_3d_inputfiles/: abundances.txt.xz  compositiondata.txt  input-newrun.txt  input-resume.txt  model.txt.xz  results_md5_final.txt  results_md5_job0.txt
tests/classicmode_inputfiles/: abundances.txt  input-newrun.txt  input-resume.txt  results_md5_final.txt  results_md5_job0.txt  vpkt.txt
tests/kilonova_1d_1dgrid_expansionopac_inputfiles/: input-resume.txt  results_md5_job0.txt
tests/kilonova_1d_1dgrid_inputfiles/: results_md5_final.txt  results_md5_job0.txt
tests/kilonova_1d_3dgrid_inputfiles/: abundances.txt  gridcontributions.txt.xz  input-newrun.txt  input-resume.txt  model.txt.xz  results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_2dgrid_barnesthermalisation_inputfiles/: results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_2dgrid_expansionopac_inputfiles/: phixsdata_v2.txt  results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_2dgrid_inputfiles/: input-resume.txt  results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_2dgrid_xcomgammaphotoion_inputfiles/: results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_3dgrid_inputfiles/: abundances.txt.xz  compositiondata.txt  gridcontributions.txt.xz  input-newrun.txt  input-resume.txt  model.txt.xz  results_md5_final.txt  results_md5_job0.txt
tests/kilonova_2d_inputfiles/: results_md5_final.txt  results_md5_job0.txt
tests/kilonova_inputfiles/: compositiondata.txt  input-newrun.txt  input-resume.txt  results_md5_final.txt  results_md5_job0.txt
tests/nebular_1d_3dgrid_inputfiles/: abundances.txt  input-newrun.txt  input-resume.txt  model.txt  results_md5_final.txt  results_md5_job0.txt
tests/nebular_1d_3dgrid_limitbfest_inputfiles/: results_md5_final.txt  results_md5_job0.txt
tests/nebularonezone/: abundances.txt  adata.txt  artisoptions.h  auger-km1993-reference.txt  co57_lines.txt  co_lines.txt  collion-auger-reference.txt  collion-reference.txt  compositiondata.txt  cr48_lines.txt  input-newrun.txt  input.txt  line_list.txt  model.txt  ni57_lines.txt  ni_lines.txt  recombrates.txt  results_md5.txt  v48_lines.txt
tests/nebularonezone_1d_3dgrid_inputfiles/: input-newrun.txt  input-resume.txt  results_md5_final.txt  results_md5_job0.txt
tools/: slice3dmodel.py
(+28 files in other folders)
